--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}My Django App{% endblock %}</title>
+    <title>{% block title %}Jaffery Sports Club{% endblock %}</title>
     {% load static %}
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -17,37 +17,81 @@
     <!-- Static Navigation Bar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="Thirteenth navbar example">
         <div class="container-fluid">
+            <a class="navbar-brand col-lg-3 me-0" href="#">Jaffery Sports Club</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample11"
                 aria-controls="navbarsExample11" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse d-lg-flex" id="navbarsExample11">
-                <a class="navbar-brand col-lg-3 me-0" href="#">Jaffery Sports Club</a>
+                
                 <ul class="navbar-nav col-lg-6 justify-content-lg-center">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Sports</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            About Us
+                        </a>
+                        <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="#">History</a></li>
+                          <li><a class="dropdown-item" href="#">Founding Members</a></li>
+                          <li><a class="dropdown-item" href="{% url 'timeline' %}">Timeline</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Sports
+                        </a>
+                        <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="#">Sports Overview</a></li>
+                          <li><a class="dropdown-item" href="#">Sports Teams</a></li>
+                          <li><a class="dropdown-item" href="#">Achievements</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Events
+                        </a>
+                        <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="#">Upcoming Events</a></li>
+                          <li><a class="dropdown-item" href="#">Past Events</a></li>
+                          <li><a class="dropdown-item" href="#">Achievements</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sports</a>
+                        <a class="nav-link active" aria-current="page" href="#">Projects</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="#">Disabled</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Celebration
+                        </a>
+                        <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="#">75 years Celebration</a></li>
+                          <li><a class="dropdown-item" href="#">100 years Celebration</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Content
+                        </a>
+                        <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="#">Video Interviews</a></li>
+                          <li><a class="dropdown-item" href="#">Books by Members</a></li>
+                        </ul>
                     </li>
 
                 </ul>
                 <div class="d-lg-flex col-lg-3 justify-content-lg-end">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle " href="#" data-bs-toggle="dropdown"
-                            aria-expanded="false">Language</a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">en</a></li>
-                            <li><a class="dropdown-item" href="#">gu</a></li>
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Lang
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-dark">
+                          <li><a class="dropdown-item active" href="#">en</a></li>
+                          <li><a class="dropdown-item" href="#">gu</a></li>
                         </ul>
-                    </li>    
+                      </div>
                 </div>
             </div>
         </div>
