--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}About Us - My Django App{% endblock %}
+{% block title %}Timeline{% endblock %}
 
 {% block content %}
 <section style="background-color: #ffffff;">
