--- a/app/templates/test.html
+++ b/app/templates/test.html
@@ -3,13 +3,7 @@
 {% block title %}About Us - My Django App{% endblock %}
 
 {% block content %}
-<div class="dropdown">
-    <button class="btn btn-secondary dropdown-toggle" type="button" id="languageDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-        Select Language
-    </button>
-    <ul class="dropdown-menu" aria-labelledby="languageDropdown">
-        <li><a class="dropdown-item" href="#">English</a></li>
-        <li><a class="dropdown-item" href="#">French</a></li>
-    </ul>
-</div>
+{% load static %}
+<img src="{% static 'media\patrons\4.JPG' %}">
+<img src="{% static 'images/logo.png' %}" alt="Logo">
 {% endblock %}
