--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -44,10 +44,11 @@
                             Sports
                         </a>
                         <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">Sports Overview</a></li>
+                          <li><a class="dropdown-item" href="{% url 'sports' %}">Sports Overview</a></li>
                           <li><a class="dropdown-item" href="#">Sports Teams</a></li>
                           <li><a class="dropdown-item" href="#">Veterans</a></li>
                           <li><a class="dropdown-item" href="#">Achievements</a></li>
+                          
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
