--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -78,7 +78,7 @@
                             Content
                         </a>
                         <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">Video Interviews</a></li>
+                          <li><a class="dropdown-item" href="{% url 'video' %}">Video Interviews</a></li>
                           <li><a class="dropdown-item" href="#">Books by Members</a></li>
                         </ul>
                     </li>
@@ -86,10 +86,10 @@
                 </ul>
                 <div class="d-lg-flex col-lg-3 justify-content-lg-end">
                     <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <button class="btn btn-outline-success dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Lang
                         </button>
-                        <ul class="dropdown-menu dropdown-menu-dark">
+                        <ul class="dropdown-menu dropdown-menu btn-outline-success">
                           <li><a class="dropdown-item active" href="#">en</a></li>
                           <li><a class="dropdown-item" href="#">gu</a></li>
                         </ul>
