--- a/app/templates/founders.html
+++ b/app/templates/founders.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}About Us - My Django App{% endblock %}
+{% block title %}Patrons{% endblock %}
 
 {% block content %}
 {% load static %}
@@ -9,14 +9,14 @@
     <section class="py-5 text-center container">
         <div class="row py-lg-5">
             <div class="col-lg-6 col-md-8 mx-auto">
-                <h1 class="fw-light">Our Patrons</h1>
-                <p class="lead text-body-secondary">Welcome to our Founders' Page, a tribute to the pioneering minds who
-                    ignited our path. Through their collective vision and courage, they established the cornerstone of
-                    our organization's success. Their portraits capture the essence of their dedication and innovation.
-                    From challenges emerged resilience, from their ideas blossomed our journey. Today, we stand on their
-                    shoulders, guided by their spirit, as we continue to evolve and inspire. These founders are the
-                    heart of our story, the architects of our legacy. Their legacy lives on in every achievement, and
-                    their influence fuels our future.</p>
+                <h1 class="fw-light">અમારા આશ્રયદાતા</h1>
+                <p class="lead text-body-secondary">અમારા સ્થાપકોના પૃષ્ઠ પર આપનું સ્વાગત છે, જે અગ્રણી દિમાગને શ્રદ્ધાંજલિ છે
+                    અમારા માર્ગને પ્રજ્વલિત કર્યો. તેમની સામૂહિક દ્રષ્ટિ અને હિંમત દ્વારા, તેઓએ પાયાના પથ્થરની સ્થાપના કરી
+                    અમારી સંસ્થાની સફળતા. તેમના પોટ્રેટ તેમના સમર્પણ અને નવીનતાના સારને કેપ્ચર કરે છે.
+                    પડકારોમાંથી સ્થિતિસ્થાપકતા ઉભરી, તેમના વિચારોથી અમારી સફર ખીલી. આજે, અમે તેમના પર ઊભા છીએ
+                    ખભા, તેમની ભાવના દ્વારા માર્ગદર્શન આપે છે, કારણ કે આપણે વિકાસ અને પ્રેરણા કરવાનું ચાલુ રાખીએ છીએ. આ સ્થાપકો છે
+                    અમારી વાર્તાનું હૃદય, અમારા વારસાના આર્કિટેક્ટ. તેમનો વારસો દરેક સિદ્ધિમાં જીવે છે, અને
+                    તેમનો પ્રભાવ આપણા ભવિષ્યને બળ આપે છે.</p>
 
             </div>
         </div>
