--- a/app/templates/video.html
+++ b/app/templates/video.html
@@ -17,16 +17,51 @@
         </div>
     </div>
 </section>
+<h1 class="fw-light text-center">Interview of Mulla Abdulrasul Khaki</h1>
 <div class="container mt-5">
-    <div class="row justify-content-center">
-        <div class="col-md-8">
+    <div class="row">
+        <div class="col-lg-8">
             <div class="embed-responsive embed-responsive-16by9">
-                <video controls class="embed-responsive-item">
+                <video class="embed-responsive-item" controls>
                     <source src="{% static 'media\videos\1.M4V' %}" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
         </div>
+        
+    </div>
+</div>
+<br/>
+<h1 class="fw-light">Other interviews of Mulla Abdulrasul Khaki</h1>
+<div class="container mt-5">
+
+    <div class="col-lg-8">
+        <div class="row">
+            <div class="col-md-6 mb-3">
+                <video class="img-fluid" controls>
+                    <source src="{% static 'media\videos\2.M4V' %}" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+            <div class="col-md-6 mb-3">
+                <video class="img-fluid" controls>
+                    <source src="{% static 'media\videos\3.M4V' %}" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+            <div class="col-md-6">
+                <video class="img-fluid" controls>
+                    <source src="{% static 'media\videos\4.M4V' %}" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+            <div class="col-md-6 mb-3">
+                <video class="img-fluid" controls>
+                    <source src="{% static 'media\videos\5.M4V' %}" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+         </div>
     </div>
 </div>
 {% endblock %}
