--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,52 @@
 {% extends "base.html" %}
 
-{% block title %}About Us - My Django App{% endblock %}
+{% block title %}Home{% endblock %}
 
 {% block content %}
 {% load static %}
-<img src="{% static 'media\patrons\4.JPG' %}">
-<img src="{% static 'images/logo.png' %}" alt="Logo">
+<div class="container py-4">
+    <div class="px-4 py-5 my-5 text-center bg-black">
+        <img class="d-block mx-auto mb-4" src="{% static 'media/banner.png' %}" alt="" width="350" height="350">
+        <h1 class="fw-bold mb-4 text-white">100 વર્ષગાંઠ</h1>
+        <div class="col-lg-6 mx-auto">
+            <p class="lead mb-4 text-white">રમતની શ્રેષ્ઠતા અને એકતાની સદીની ઉજવણી! અમારા સમુદાયની 100 વર્ષની યાત્રાને
+                યાદ કરવા
+                અમારી સાથે જોડાઓ. નમ્ર શરૂઆતથી લઈને નોંધપાત્ર સિદ્ધિઓ સુધી, અમે સાથે મળીને વિકાસ કર્યો છે. ચાલો
+                ભૂતકાળનું સન્માન કરીએ, વર્તમાનને સ્વીકારીએ અને ભવિષ્યને પ્રેરણા આપીએ. અહીં સૌહાર્દ, જુસ્સો અને અમર્યાદ
+                સંભાવનાની સદી છે.</p>
+            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+            </div>
+        </div>
+    </div>
+
+    <div class="p-5 mb-4 bg-body-tertiary rounded-3">
+        <div class="container-fluid py-5">
+            <h1 class="display-5 fw-bold">Interviews</h1>
+            <p class="col-md-8 fs-4">Step into a world of insights and inspiration with our captivating video
+                interviews. Immerse yourself in candid conversations with thought leaders, pioneers, and visionaries
+                from various fields.</p>
+                <a class="btn btn-outline-success btn-lg" href="{% url 'video' %}" role="button">Watch Now</a>
+        </div>
+    </div>
+
+    <div class="row align-items-md-stretch">
+        <div class="col-md-6">
+            <div class="h-100 p-5 text-bg-dark rounded-3">
+                <h2>Community Sports</h2>
+                <p>Explore our photo gallery of a vibrant sports community that celebrates victories and fosters camaraderie. Diverse teams,
+                    thrilling matches, and dynamic events define us.</p>
+                    <a class="btn btn-outline-success btn-lg" href="{% url 'sports' %}" role="button">Sports</a>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="h-100 p-5 bg-body-tertiary border rounded-3">
+                <h2>Our Patrons</h2>
+                <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be
+                    sure to look under the hood at the source HTML here as we've adjusted the alignment and sizing of
+                    both column's content for equal-height.</p>
+                <a class="btn btn-outline-success" href="{% url 'founders' %}" role="button">Our Founders</a>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
